[gd_scene load_steps=9 format=3 uid="uid://chyuuegy6ob5p"]

[ext_resource type="Theme" uid="uid://1adxjbws8hdd" path="res://editor/editor_theme.tres" id="1_175df"]
[ext_resource type="Script" uid="uid://ducmigl5efol2" path="res://editor/select_pic_editor.gd" id="2_tn85k"]
[ext_resource type="Script" uid="uid://c7m2kbcwi7aiu" path="res://editor/base/drop_node_cb.gd" id="3_b355j"]
[ext_resource type="PackedScene" uid="uid://gs5a24cnsr7x" path="res://editor/base/slider_of_vector2.tscn" id="4_g5e2t"]
[ext_resource type="PackedScene" uid="uid://bq7q1o8wrwcb7" path="res://misc/keep_ratio_picture.tscn" id="4_uqtrd"]
[ext_resource type="Script" uid="uid://b4mo7y6pgjgq6" path="res://editor/base/param_edit/param_edit_root.gd" id="4_yrd2h"]
[ext_resource type="Script" uid="uid://daqh0iya30pen" path="res://editor/base/param_edit/param_edit_control.gd" id="5_uqtrd"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_g5e2t"]

[node name="select_pic_editor" type="MarginContainer"]
offset_right = 839.0
offset_bottom = 492.0
theme = ExtResource("1_175df")
script = ExtResource("2_tn85k")

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
theme = ExtResource("1_175df")

[node name="PicContainer" type="PanelContainer" parent="HSplitContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_175df")
script = ExtResource("3_b355j")

[node name="Control" type="Control" parent="HSplitContainer/PicContainer"]
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="HSplitContainer/PicContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "no picture yet, drag a picture here to set"
horizontal_alignment = 1
vertical_alignment = 1

[node name="picture" parent="HSplitContainer/PicContainer/Control" instance=ExtResource("4_uqtrd")]
unique_name_in_owner = true
layout_mode = 0
expand_mode = 1
stretch_mode = 5

[node name="PanelContainer2" type="PanelContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer/PanelContainer2"]
layout_mode = 2

[node name="Button_add_normal" type="Button" parent="HSplitContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(266, 0)
layout_mode = 2
theme = ExtResource("1_175df")
theme_override_colors/font_color = Color(0, 1, 0.216667, 1)
theme_override_colors/font_focus_color = Color(0, 1, 0.216667, 1)
text = "add button"

[node name="param_container" type="PanelContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_175df")
script = ExtResource("4_yrd2h")

[node name="param_root" type="VBoxContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("4_yrd2h")

[node name="HBoxContainer5" type="HBoxContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer5"]
layout_mode = 2
text = "button name"

[node name="button_name" type="LineEdit" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "empty"
script = ExtResource("5_uqtrd")
param_name = "name"

[node name="Button_bt_use_name" type="CheckBox" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_175df")
text = "button text use name"
script = ExtResource("5_uqtrd")
param_name = "name_as_text"

[node name="HBoxContainer7" type="HBoxContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer7"]
layout_mode = 2
text = "button text"

[node name="button_text" type="LineEdit" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "empty"
script = ExtResource("5_uqtrd")
param_name = "text"

[node name="HBoxContainer6" type="HBoxContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer6"]
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
text = "position"
horizontal_alignment = 1

[node name="SliderOfVector2" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer6" instance=ExtResource("4_g5e2t")]
layout_mode = 2
param_name = "pos"

[node name="HSeparator" type="HSeparator" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root"]
layout_mode = 2
theme_override_constants/separation = 3
theme_override_styles/separator = SubResource("StyleBoxLine_g5e2t")

[node name="HBoxContainer2" type="HBoxContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer2"]
custom_minimum_size = Vector2(63, 0)
layout_mode = 2
text = "size"
horizontal_alignment = 1

[node name="SliderOfVector2" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer2" instance=ExtResource("4_g5e2t")]
layout_mode = 2
param_name = "size"

[node name="HBoxContainer3" type="HBoxContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer3"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "font color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
color = Color(1, 1, 1, 1)
script = ExtResource("5_uqtrd")
param_name = "fontcolor"

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root"]
layout_mode = 2

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "backgroung color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
script = ExtResource("5_uqtrd")
param_name = "bgcolor"

[node name="HBoxContainer4" type="HBoxContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root"]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer4"]
layout_mode = 2
script = ExtResource("5_uqtrd")
param_name = "isPicture"

[node name="Label" type="Label" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer4"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
text = "pic  button"

[node name="ColorPickerButton" type="PanelContainer" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer4"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("1_175df")

[node name="DropLabel" type="Label" parent="HSplitContainer/PanelContainer2/VBoxContainer/param_container/param_root/HBoxContainer4/ColorPickerButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
mouse_filter = 1
text = "drag here set"
clip_text = true
script = ExtResource("3_b355j")
